// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`SummarySection failure only 1`] = `
<div
  className="summary-section"
>
  <h2>
    Summary
  </h2>
  <OutcomeSummaryBar
    allOutcomeTypes={
      Array [
        "fail",
        "pass",
        "inapplicable",
      ]
    }
    iconStyleInverted={true}
    outcomeStats={
      Object {
        "fail": 3,
        "inapplicable": 0,
        "pass": 0,
      }
    }
    scanResult={
      Object {
        "inapplicable": Array [],
        "passes": Array [],
        "violations": Array [
          Object {
            "nodes": Array [
              Object {},
            ],
          },
          Object {
            "nodes": Array [
              Object {},
              Object {},
            ],
          },
        ],
      }
    }
  />
</div>
`;

exports[`SummarySection failures + not applicable + passes 1`] = `
<div
  className="summary-section"
>
  <h2>
    Summary
  </h2>
  <OutcomeSummaryBar
    allOutcomeTypes={
      Array [
        "fail",
        "pass",
        "inapplicable",
      ]
    }
    iconStyleInverted={true}
    outcomeStats={
      Object {
        "fail": 3,
        "inapplicable": 3,
        "pass": 2,
      }
    }
    scanResult={
      Object {
        "inapplicable": Array [
          Object {},
          Object {},
          Object {},
        ],
        "passes": Array [
          Object {},
          Object {},
        ],
        "violations": Array [
          Object {
            "nodes": Array [
              Object {},
            ],
          },
          Object {
            "nodes": Array [
              Object {},
              Object {},
            ],
          },
        ],
      }
    }
  />
</div>
`;

exports[`SummarySection failures + not applicable only 1`] = `
<div
  className="summary-section"
>
  <h2>
    Summary
  </h2>
  <OutcomeSummaryBar
    allOutcomeTypes={
      Array [
        "fail",
        "pass",
        "inapplicable",
      ]
    }
    iconStyleInverted={true}
    outcomeStats={
      Object {
        "fail": 3,
        "inapplicable": 3,
        "pass": 0,
      }
    }
    scanResult={
      Object {
        "inapplicable": Array [
          Object {},
          Object {},
          Object {},
        ],
        "passes": Array [],
        "violations": Array [
          Object {
            "nodes": Array [
              Object {},
            ],
          },
          Object {
            "nodes": Array [
              Object {},
              Object {},
            ],
          },
        ],
      }
    }
  />
</div>
`;

exports[`SummarySection failures + passes only 1`] = `
<div
  className="summary-section"
>
  <h2>
    Summary
  </h2>
  <OutcomeSummaryBar
    allOutcomeTypes={
      Array [
        "fail",
        "pass",
        "inapplicable",
      ]
    }
    iconStyleInverted={true}
    outcomeStats={
      Object {
        "fail": 3,
        "inapplicable": 0,
        "pass": 2,
      }
    }
    scanResult={
      Object {
        "inapplicable": Array [],
        "passes": Array [
          Object {},
          Object {},
        ],
        "violations": Array [
          Object {
            "nodes": Array [
              Object {},
            ],
          },
          Object {
            "nodes": Array [
              Object {},
              Object {},
            ],
          },
        ],
      }
    }
  />
</div>
`;

exports[`SummarySection not applicable + passes only 1`] = `
<div
  className="summary-section"
>
  <h2>
    Summary
  </h2>
  <OutcomeSummaryBar
    allOutcomeTypes={
      Array [
        "fail",
        "pass",
        "inapplicable",
      ]
    }
    iconStyleInverted={true}
    outcomeStats={
      Object {
        "fail": 0,
        "inapplicable": 3,
        "pass": 2,
      }
    }
    scanResult={
      Object {
        "inapplicable": Array [
          Object {},
          Object {},
          Object {},
        ],
        "passes": Array [
          Object {},
          Object {},
        ],
        "violations": Array [],
      }
    }
  />
</div>
`;

exports[`SummarySection not applicable only 1`] = `
<div
  className="summary-section"
>
  <h2>
    Summary
  </h2>
  <OutcomeSummaryBar
    allOutcomeTypes={
      Array [
        "fail",
        "pass",
        "inapplicable",
      ]
    }
    iconStyleInverted={true}
    outcomeStats={
      Object {
        "fail": 0,
        "inapplicable": 0,
        "pass": 2,
      }
    }
    scanResult={
      Object {
        "inapplicable": Array [],
        "passes": Array [
          Object {},
          Object {},
        ],
        "violations": Array [],
      }
    }
  />
</div>
`;

exports[`SummarySection passes only 1`] = `
<div
  className="summary-section"
>
  <h2>
    Summary
  </h2>
  <OutcomeSummaryBar
    allOutcomeTypes={
      Array [
        "fail",
        "pass",
        "inapplicable",
      ]
    }
    iconStyleInverted={true}
    outcomeStats={
      Object {
        "fail": 0,
        "inapplicable": 0,
        "pass": 2,
      }
    }
    scanResult={
      Object {
        "inapplicable": Array [],
        "passes": Array [
          Object {},
          Object {},
        ],
        "violations": Array [],
      }
    }
  />
</div>
`;
